@@ -169,18 +169,13 @@ var Env = (function(){
     }
     browser = matched[1].toLowerCase();
     version = parseInt(matched[2], 10);
-    if(browser === "msie"){
-      is_transform_enable = version >= 9;
-    } else {
-      is_transform_enable = true;
-    }
   } else {
     browser = nav.toLowerCase();
     version = parseInt(navigator.appVersion, 10);
-    is_transform_enable = false;
   }
 
-  var is_ie = browser === "msie";
+  var is_trident = ua.indexOf("trident") >= 0;
+  var is_ie = browser === "msie" || is_trident;
   var is_win = ua.indexOf("windows") >= 0;
   var is_mac = ua.indexOf("macintosh") >= 0;
   var is_chrome = browser.indexOf("chrome") >= 0;
@@ -191,11 +186,13 @@ var Env = (function(){
   var is_android_family = ua.indexOf("android") != -1;
   var is_smart_phone = is_iphone_family || is_android_family;
   var is_webkit = ua.indexOf("webkit") != -1;
+  var is_transform_enable = is_trident || !(is_ie && version <= 8);
   var is_vertical_glyph_enable = is_chrome && (is_win || is_mac) && version >= 24;
 
   return {
     version : version,
     isIE : is_ie,
+    isTrident : is_trident,
     isChrome : is_chrome,
     isWebkit : is_webkit,
     isIphone : is_iphone,
@@ -3303,16 +3300,30 @@ var Word = (function(){
 
   Word.prototype = {
     getCssVertTrans : function(line){
-      var css = {}, font_size = line.getFontSize();
+      var css = {};
       css["letter-spacing"] = line.letterSpacing + "px";
-      css.width = font_size + "px";
+      css.width = line.getFontSize() + "px";
       css.height = this.bodySize + "px";
-      css["margin-left"] = css["margin-right"] = "auto";
+      css["margin-left"] = "auto";
+      css["margin-right"] = "auto";
       return css;
     },
     getCssVertTransBody : function(line){
       var css = {};
       css["font-family"] = line.getFontFamily();
+      return css;
+    },
+    // set line-height to word body size before rotation,
+    // and fix offset by translate after rotatation.
+    getCssVertTransBodyTrident : function(line){
+      var css = {};
+      var trans = Math.floor((this.bodySize - line.getFontSize()) / 2);
+      css["font-family"] = line.getFontFamily();
+      css.width = line.getFontSize() + "px";
+      css.height = this.bodySize + "px";
+      css["line-height"] = this.bodySize + "px";
+      css["transform-origin"] = "50% 50%";
+      css["transform"] = "rotate(90deg) translate(-" + trans + "px, 0)";
       return css;
     },
     getCssVertTransIE : function(line){
@@ -9448,6 +9459,9 @@ var VertInlineTreeEvaluator = (function(){
 
   VertInlineTreeEvaluator.prototype.evalWord = function(line, word){
     if(Env.isTransformEnable){
+      if(Env.isTrident){
+	return this.evalWordTransformTrident(line, word);
+      }
       return this.evalWordTransform(line, word);
     } else if(Env.isIE){
       return this.evalWordIE(line, word);
@@ -9460,6 +9474,17 @@ var VertInlineTreeEvaluator = (function(){
     var body = Html.tagWrap("div", word.data, {
       "class": "nehan-rotate-90",
       "style": Css.toString(word.getCssVertTransBody(line))
+    });
+    return Html.tagWrap("div", body, {
+      "style": Css.toString(word.getCssVertTrans(line))
+    });
+  };
+
+  VertInlineTreeEvaluator.prototype.evalWordTransformTrident = function(line, word){
+    var body = Html.tagWrap("div", word.data, {
+      // trident rotation needs some hack.
+      //"class": "nehan-rotate-90",
+      "style": Css.toString(word.getCssVertTransBodyTrident(line))
     });
     return Html.tagWrap("div", body, {
       "style": Css.toString(word.getCssVertTrans(line))
