@@ -6,10 +6,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <meta http-equiv="Content-Script-Type" content="text/javascript">
-    <link rel="stylesheet" type="text/css" href="nehan.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/nehan.css" />
     <link rel="stylesheet" type="text/css" href="catalog.css" />
-    <script type="text/javascript" src="jquery.min.js"></script>
-    <script type="text/javascript" src="nehan.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/js/nehan.js"></script>
     <script type="text/javascript" src="catalog.js"></script>
     <script type="text/javascript">
 $(function(){
