@@ -10,18 +10,13 @@ var Env = (function(){
     }
     browser = matched[1].toLowerCase();
     version = parseInt(matched[2], 10);
-    if(browser === "msie"){
-      is_transform_enable = version >= 9;
-    } else {
-      is_transform_enable = true;
-    }
   } else {
     browser = nav.toLowerCase();
     version = parseInt(navigator.appVersion, 10);
-    is_transform_enable = false;
   }
 
-  var is_ie = browser === "msie";
+  var is_trident = ua.indexOf("trident") >= 0;
+  var is_ie = browser === "msie" || is_trident;
   var is_win = ua.indexOf("windows") >= 0;
   var is_mac = ua.indexOf("macintosh") >= 0;
   var is_chrome = browser.indexOf("chrome") >= 0;
@@ -32,11 +27,13 @@ var Env = (function(){
   var is_android_family = ua.indexOf("android") != -1;
   var is_smart_phone = is_iphone_family || is_android_family;
   var is_webkit = ua.indexOf("webkit") != -1;
+  var is_transform_enable = is_trident || !(is_ie && version <= 8);
   var is_vertical_glyph_enable = is_chrome && (is_win || is_mac) && version >= 24;
 
   return {
     version : version,
     isIE : is_ie,
+    isTrident : is_trident,
     isChrome : is_chrome,
     isWebkit : is_webkit,
     isIphone : is_iphone,
