@@ -7,16 +7,30 @@ var Word = (function(){
 
   Word.prototype = {
     getCssVertTrans : function(line){
-      var css = {}, font_size = line.getFontSize();
+      var css = {};
       css["letter-spacing"] = line.letterSpacing + "px";
-      css.width = font_size + "px";
+      css.width = line.getFontSize() + "px";
       css.height = this.bodySize + "px";
-      css["margin-left"] = css["margin-right"] = "auto";
+      css["margin-left"] = "auto";
+      css["margin-right"] = "auto";
       return css;
     },
     getCssVertTransBody : function(line){
       var css = {};
       css["font-family"] = line.getFontFamily();
+      return css;
+    },
+    // set line-height to word body size before rotation,
+    // and fix offset by translate after rotatation.
+    getCssVertTransBodyTrident : function(line){
+      var css = {};
+      var trans = Math.floor((this.bodySize - line.getFontSize()) / 2);
+      css["font-family"] = line.getFontFamily();
+      css.width = line.getFontSize() + "px";
+      css.height = this.bodySize + "px";
+      css["line-height"] = this.bodySize + "px";
+      css["transform-origin"] = "50% 50%";
+      css["transform"] = "rotate(90deg) translate(-" + trans + "px, 0)";
       return css;
     },
     getCssVertTransIE : function(line){
